fixed the alignment of status in elm int

--- a/src/styles/AssessmentSlateCanvas/AssessmentSlateCanvas.css
+++ b/src/styles/AssessmentSlateCanvas/AssessmentSlateCanvas.css
@@ -328,6 +328,12 @@ span.approved-button.enable svg path#path2 {
   display: flex;
   margin: 30px 0 20px 142px;
 }
+.cls-display-flex{
+  display: flex;
+}
+.elm-int-status-alignment{
+  margin: 0px 0px 20px 20px !important;
+}
 
 .show-update#link-notification{
   display: block;
